Hooked up store to few other components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="card events-card">
       <header class="card-header">
         <p class="card-header-title">
-          Blocks
+          Recent Blocks
         </p>
       </header>
       <div class="card-table dash-card-table">
@@ -12,15 +12,15 @@
             <tbody>
               <tr *ngFor="let block of (appState | async).blocks">
                 <td width="5%"><i class="fas fa-vector-square"></i></td>
-                <td class="block-title">{{block.data.value.block.header.app_hash}}</td>
-                <td class="block-title">{{block.data.value.block.header.height}}</td>
+                <td class="block-title">{{block.header.app_hash}}</td>
+                <td width="20%">{{block.header.height}}</td>
                </tr>
             </tbody>
           </table>
         </div>
       </div>
       <footer class="card-footer">
-        <a routerLink="/txs" class="card-footer-item">View More</a>
+        <a routerLink="/blocks" class="card-footer-item">View More</a>
       </footer>
     </div>
   </div>
@@ -29,17 +29,17 @@
     <div class="card events-card">
       <header class="card-header">
         <p class="card-header-title">
-          Transactions
+          Recent Transactions
         </p>
       </header>
       <div class="card-table dash-card-table">
         <div class="content">
           <table class="table is-fullwidth is-striped">
             <tbody>
-              <tr *ngFor="let tx of (appState | async).txs">
-                <td width="5%"><i class="fas fa-vector-square"></i></td>                
-                <td class="block-title">{{tx.data.value.TxResult.tx}}</td>
-                <td width="20%">{{tx.data.value.TxResult.height}}</td>
+              <tr *ngFor="let tx of (appState | async).txs.reverse()">
+                <td width="5%"><i class="fas fa-exchange-alt"></i></td>                
+                <td class="block-title">{{tx.tx}}</td>
+                <td width="20%">{{tx.height}}</td>
               </tr>
             </tbody>
           </table>
