--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -1,6 +1,7 @@
 <div class="card events-card">
   <header class="card-header">
-    <p class="card-header-title">Validators</p>
+    
+    <p class="card-header-title"><i class="fas fa-users"></i>Validators</p>
   </header>
   <div class="card-table">
     <div class="content">
