--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Welcome to Iris Explorer
+            Irisnet Explorer
           </h1>
-          <h2 class="subtitle">Chain: {{appState.chainId}}</h2>
+          <h2 class="subtitle">Chain: {{(appState | async).blocks[0].header.chain_id}}</h2>
         </div>
       </div>
     </section>
@@ -28,7 +28,7 @@
       <div class="tile is-ancestor has-text-centered">
         <div style="cursor: pointer;" routerLink="/last-block" class="tile is-parent">
           <article class="tile is-child box">
-            <p *ngFor="let block of appState.lastBlocks.reverse().slice(0,1)" class="title">{{block.data.value.block.header.height}}</p>
+            <p *ngFor="let block of (appState | async).blocks.reverse().slice(0,1)" class="title">{{block.header.height}}</p>
             <p class="subtitle">Last Block</p>
           </article>
         </div>
@@ -40,7 +40,7 @@
         </div>
          <div style="cursor: pointer;" routerLink="/validators" class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">{{appState.lastBlocks[0].data.value.block.last_commit.precommits.length}}</p>
+            <p class="title">1</p>
             <p class="subtitle">Validators</p>
           </article>
         </div>
