--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -1,6 +1,6 @@
 <div class="card events-card">
   <header class="card-header">
-    <p class="card-header-title">Blocks</p>
+    <p class="card-header-title"><i class="fas fa-vector-square"></i>Blocks</p>
   </header>
   <div class="card-table">
     <div class="content">
