--- a/src/app/txs/txs.component.html
+++ b/src/app/txs/txs.component.html
@@ -1,6 +1,6 @@
 <div class="card events-card">
   <header class="card-header">
-    <p class="card-header-title">Transactions</p>
+    <p class="card-header-title"><i class="fas fa-exchange-alt"></i>Transactions</p>
   </header>
   <div class="card-table">
     <div class="content">
