Added feature to browse older blocks

--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -22,3 +22,7 @@
     </div>
   </div>
 </div>
+<nav class="pagination" role="navigation" aria-label="pagination">
+  <button (click)="displayNewerBlocks()" class="pagination-previous button is-dark">Newer</button>
+  <button (click)="displayOlderBlocks()" class="pagination-next button is-dark">Older</button>
+</nav>
