--- a/src/app/blocks/blocks.component.css
+++ b/src/app/blocks/blocks.component.css
@@ -8,3 +8,7 @@ td {
   white-space: nowrap; /* to make sure the line doesn't break when it is longer than the containing div. */
   text-overflow: ellipsis;
 }
+
+button {
+  margin: 15px;
+}
