--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -23,6 +23,6 @@
   </div>
 </div>
 <nav class="pagination" role="navigation" aria-label="pagination">
-  <button (click)="displayNewerBlocks()" class="pagination-previous button is-dark">Newer</button>
-  <button (click)="displayOlderBlocks()" class="pagination-next button is-dark">Older</button>
+  <button disabled id="btn-newer" (click)="displayNewerBlocks()" class="pagination-previous button is-dark">Newer</button>
+  <button id="btn-older" (click)="displayOlderBlocks()" class="pagination-next button is-dark">Older</button>
 </nav>
