--- a/src/app/last-block/last-block.component.css
+++ b/src/app/last-block/last-block.component.css
@@ -8,3 +8,7 @@ td, div, h1, h3 {
   white-space: nowrap; /* to make sure the line doesn't break when it is longer than the containing div. */
   text-overflow: ellipsis;
 }
+
+/*#precommits {
+  display: none;
+}*/
