Added tx and block components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Irisnet Explorer
+            Coris - IRISnet Explorer
           </h1>
           <h2 class="subtitle">Chain: {{(appState | async).blocks[0].header.chain_id}}</h2>
         </div>
@@ -58,7 +58,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      Iris Explorer 2019
+      Coris - 2019
     </p>
   </div>
 </footer>
