--- a/src/app/block/block.component.html
+++ b/src/app/block/block.component.html
@@ -1,10 +1,10 @@
-<div *ngFor="let block of (appState | async).blocks.slice(0,1)" class="card events-card">
+<div *ngIf="(block.last_commit !== undefined)" class="card events-card">
   <div class="card-table">
     <div class="content">
       <article class="message">
         <div class="message-header">
           <i class="fab fa-codepen"></i>
-          <p>Latest Block</p>
+          <p>Block</p>
         </div>
         <div class="message-body">
           <h3>Block at {{block.header.height}}</h3>
