--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -11,10 +11,10 @@
             <th>Height</th>
             <th>Time</th>
           </tr>
-          <tr routerLink="/block/{{block.header.height}}" class="clickable" *ngFor="let block of blocks">
-            <td>{{block.block_id.hash}}</td>
-            <td>{{block.header.height}}</td>
-            <td>{{block.header.time}}</td>
+          <tr routerLink="/block/{{block.height}}" class="clickable" *ngFor="let block of blocks">
+            <td>{{block.hash}}</td>
+            <td>{{block.height}}</td>
+            <td>{{block.time}}</td>
             <!-- <td><a class="button is-small is-primary" href="#">{{validator.power}}</a></td> -->
           </tr>
         </tbody>
