--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,12 @@ html, body {
   background: #ECF0F3;
 }
 
+h2 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .card {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
   margin-bottom: 2rem;
