Validators monikers mapped

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Coris - IRISnet Explorer
+            Coris - Tendermint Explorer
           </h1>
           <h2 class="subtitle">Chain: {{(appState | async).blocks[0]?.header.chain_id}}</h2>
         </div>
