--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -8,12 +8,12 @@
       <table class="table is-fullwidth is-striped">
         <tbody>
           <tr>
-            <th>Address</th>
+            <th>Moniker</th>
             <th>Power, Stake</th>
             <th>Proposer Priority</th>
           </tr>
           <tr *ngFor="let validator of (appState | async).validators">
-            <td>{{validator.address}}</td>
+            <td>{{validator.description?.moniker}}</td>
             <td><a class="button is-small is-primary">{{validator.voting_power}}</a></td>
             <td><a class="button is-small is-primary">{{validator.proposer_priority}}</a></td>
           </tr>
