WiP initiated validator details page

--- a/src/app/tx/tx.component.html
+++ b/src/app/tx/tx.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="(tx.hash !== undefined)" class="card events-card">
+<div *ngIf="(tx?.hash)" class="card events-card">
   <div class="card-table">
     <div class="content">
       <article class="message">
