--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -16,7 +16,7 @@
             <table class="table is-fullwidth is-striped">
               <tbody>
                 <tr>
-                  <th><a routerLink="/validator/{{validator.address}}">Learn more</a></th>
+                  <th><a routerLink="/validator/{{validator.keys?.Addres}}">Learn more</a></th>
                 </tr>
                 <!-- <div [style.display]="displayCommits ? 'flex': 'none'" id="precommits">
                   <tr>
