WiP: fixing post request CORS bug

--- a/src/app/txs/txs.component.html
+++ b/src/app/txs/txs.component.html
@@ -1,6 +1,7 @@
 <div class="card events-card">
   <header class="card-header">
     <p class="card-header-title"><i class="fas fa-exchange-alt"></i>Transactions</p>
+    <a routerLink="/new/tx" class="pagination-next button is-primary">New</a>
   </header>
   <div class="card-table">
     <div class="content">
